# Multimodal-RAG-Pipeline-by-LangGraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deployment_strategies.md  docker-compose.local.yml  docker-compose.yml  future_upgrades.md  main.py  ongoing_deployment_errors.md  pyproject.toml  requirements.txt
backend/: config.py  graph.py  main.py  prompts.py  state.py
backend/api/: dependencies.py  main.py  schemas.py
backend/api/routes/: auth.py  chat.py  upload.py
backend/db/: cache.py  connection.py  migrations.py  users.py  vector_store.py
backend/nodes/: clarification.py  classify_route.py  executor_worker.py  fanout.py  generator.py  give_up.py  planner.py  url_router.py
backend/tools/: audio_tools.py  image_tools.py  pdf_tools.py  summarizer.py  web_tools.py  youtube_tools.py
backend/utils/: auth.py  history.py  retry.py  storage.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: chat.js  client.js
frontend/src/components/: ClarificationBar.jsx  ConversationList.jsx  FileChip.jsx  InputBar.jsx  MessageBubble.jsx  MessageList.jsx  Sidebar.jsx  StepList.jsx  UserAccountBlock.jsx
frontend/src/context/: AuthContext.jsx  ChatContext.jsx
frontend/src/pages/: Chat.jsx  Login.jsx  Signup.jsx
frontend/src/styles/: index.css
