[project]
name = "multimodal-rag-pipeline-by-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "arxiv>=4.0.0",
    "asyncpg>=0.31.0",
    "audioop-lts>=0.2.2",
    "bcrypt>=5.0.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langserve>=0.3.3",
    "langsmith>=0.8.9",
    "psycopg-binary>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pydub>=0.25.1",
    "pyjwt>=2.13.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.25",
    "tenacity>=9.1.4",
    "tqdm>=4.68.1",
    "upstash-redis>=1.7.0",
    "uvicorn>=0.49.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]
